test/files/neg/t2910b.scala
class Bop {
  def f = {
    println(s.length)
    lazy val s = "abc"
  }
}